feat(bootstrap): refactor language resources and form components for initialization
- Replaced BootstrapPage with BootstrapProvider for improved structure and clarity in initialization.
- Updated language resources to use BootstrapProvider instead of BootstrapPage, enhancing multilingual support.
- Refactored form components to utilize a consistent Input component, improving code reusability and maintainability.
- Removed deprecated BootstrapPage files and styles, streamlining the codebase.
- Enhanced button styles and functionality for better user experience during system initialization.

--- a/console/src/assets/languages/fr/elements.bootstrap.json
+++ b/console/src/assets/languages/fr/elements.bootstrap.json
@@ -36,7 +36,7 @@
   "admin_phone": {
     "label": "Téléphone administrateur (Optionnel)",
     "placeholder": "Veuillez entrer le numéro de téléphone",
-    "country_code_placeholder": "+33"
+    "country_code_placeholder": "33"
   },
   "required": "*",
   "validation": {
