--- a/console/src/assets/languages/en/elements.bootstrap.json
+++ b/console/src/assets/languages/en/elements.bootstrap.json
@@ -36,7 +36,7 @@
   "admin_phone": {
     "label": "Administrator Phone (Optional)",
     "placeholder": "Please enter phone number",
-    "country_code_placeholder": "+1"
+    "country_code_placeholder": "1"
   },
   "required": "*",
   "validation": {
