feat(bootstrap): enhance initialization feedback and loading states
- Added new loading messages for system initialization in English, French, and Chinese to improve user experience during startup.
- Implemented loading modal functionality to provide visual feedback while the system checks its status.
- Refactored the BootstrapProvider to include a language switcher and theme switcher for better user interface control.
- Updated the useSubmitBootstrap hook to show loading indicators during the initialization process, enhancing user engagement.

--- a/console/src/assets/languages/en/BootstrapProvider.json
+++ b/console/src/assets/languages/en/BootstrapProvider.json
@@ -5,5 +5,6 @@
   "admin_section": "Administrator Account",
   "optional_section": "Optional Information",
   "initializing": "Initializing...",
-  "start_initialization": "Start Initialization"
+  "start_initialization": "Start Initialization",
+  "checking_system_status": "Checking system status..."
 }
