--- a/console/src/assets/languages/fr/BootstrapProvider.json
+++ b/console/src/assets/languages/fr/BootstrapProvider.json
@@ -5,5 +5,6 @@
   "admin_section": "Compte administrateur",
   "optional_section": "Informations optionnelles",
   "initializing": "Initialisation en cours...",
-  "start_initialization": "Démarrer l'initialisation"
+  "start_initialization": "Démarrer l'initialisation",
+  "checking_system_status": "Vérification de l'état du système..."
 }
