--- a/console/src/assets/languages/zh/BootstrapProvider.json
+++ b/console/src/assets/languages/zh/BootstrapProvider.json
@@ -5,5 +5,6 @@
   "admin_section": "管理员账户",
   "optional_section": "可选信息",
   "initializing": "初始化中...",
-  "start_initialization": "开始初始化"
+  "start_initialization": "开始初始化",
+  "checking_system_status": "检查系统状态..."
 }
