--- a/console/src/assets/languages/fr/LoginPage.json
+++ b/console/src/assets/languages/fr/LoginPage.json
@@ -5,6 +5,7 @@
   "register": "S'inscrire",
   "email": "Email",
   "phone": "Téléphone",
+  "countryCode": "Code pays",
   "password": "Mot de passe",
   "loginType": {
     "email": "Email",
@@ -17,5 +18,35 @@
   "loggingIn": "Connexion en cours...",
   "loginFailed": "Échec de la connexion, veuillez réessayer",
   "invalidCredentials": "Email ou mot de passe invalide",
-  "accountLocked": "Le compte est verrouillé en raison de trop nombreuses tentatives de connexion échouées"
+  "accountLocked": "Le compte est verrouillé en raison de trop nombreuses tentatives de connexion échouées",
+  "register": "S'inscrire",
+  "registerType": {
+    "email": "Email",
+    "phone": "Téléphone"
+  },
+  "verificationCode": "Code de vérification",
+  "inviteCode": "Code d'invitation",
+  "sendCode": "Envoyer le code",
+  "resendCode": "Renvoyer",
+  "codeSent": "Code de vérification envoyé",
+  "codeSentToEmail": "Code de vérification envoyé à l'email",
+  "codeSentToPhone": "Code de vérification envoyé au téléphone",
+  "registering": "Inscription en cours...",
+  "registerFailed": "Échec de l'inscription, veuillez réessayer",
+  "hasAccount": "Vous avez déjà un compte ?",
+  "signInNow": "Se connecter maintenant",
+  "validation": {
+    "emailRequired": "L'email est requis",
+    "emailInvalid": "Veuillez entrer une adresse email valide",
+    "phoneRequired": "Le numéro de téléphone est requis",
+    "phoneNumeric": "Le numéro de téléphone ne peut contenir que des chiffres",
+    "phoneMinLength": "Le numéro de téléphone doit contenir au moins 6 chiffres",
+    "codeRequired": "Le code est requis",
+    "codeNumeric": "Le code ne peut contenir que des chiffres",
+    "passwordRequired": "Le mot de passe est requis",
+    "passwordMinLength": "Le mot de passe doit contenir au moins 6 caractères",
+    "verificationCodeRequired": "Le code de vérification est requis",
+    "verificationCodeLength": "Le code de vérification doit contenir 6 chiffres",
+    "inviteCodeRequired": "Le code d'invitation est requis"
+  }
 }
