--- a/console/src/assets/languages/zh/LoginPage.json
+++ b/console/src/assets/languages/zh/LoginPage.json
@@ -5,6 +5,7 @@
   "register": "注册",
   "email": "邮箱",
   "phone": "手机号",
+  "code": "代码",
   "password": "密码",
   "loginType": {
     "email": "邮箱",
@@ -17,5 +18,35 @@
   "loggingIn": "正在登录...",
   "loginFailed": "登录失败，请稍后重试",
   "invalidCredentials": "邮箱或密码错误",
-  "accountLocked": "账户因多次登录失败已被锁定"
+  "accountLocked": "账户因多次登录失败已被锁定",
+  "register": "注册",
+  "registerType": {
+    "email": "邮箱",
+    "phone": "手机"
+  },
+  "verificationCode": "验证码",
+  "inviteCode": "邀请代码",
+  "sendCode": "获取验证码",
+  "resendCode": "重新发送",
+  "codeSent": "验证码已发送",
+  "codeSentToEmail": "验证码已发送到邮箱",
+  "codeSentToPhone": "验证码已发送到手机",
+  "registering": "正在注册...",
+  "registerFailed": "注册失败，请稍后重试",
+  "hasAccount": "已有账号？",
+  "signInNow": "立即登录",
+  "validation": {
+    "emailRequired": "邮箱不能为空",
+    "emailInvalid": "请输入有效的邮箱地址",
+    "phoneRequired": "手机号不能为空",
+    "phoneNumeric": "手机号只能包含数字",
+    "phoneMinLength": "手机号至少需要6位",
+    "codeRequired": "代码不能为空",
+    "codeNumeric": "代码只能包含数字",
+    "passwordRequired": "密码不能为空",
+    "passwordMinLength": "密码至少需要6位",
+    "verificationCodeRequired": "验证码不能为空",
+    "verificationCodeLength": "验证码必须是6位数字",
+    "inviteCodeRequired": "邀请代码不能为空"
+  }
 }
