feat(directory): add API for retrieving user email list by user ID and update related components
- Implemented GetUserEmailsByUserID API to fetch a list of user emails based on user ID.
- Updated URL_PATHS to include the new endpoint for retrieving user emails.
- Refactored components to utilize the new API, enhancing email retrieval logic and user experience.
- Added language support for the new functionality in the user interface.

--- a/console/src/assets/languages/zh/components.json
+++ b/console/src/assets/languages/zh/components.json
@@ -12,7 +12,7 @@
     "french": "法语"
   },
   "header": {
-    "platformName": "双江古寨茶业管理平台",
+    "platformName": "NebulaForgeX 身份平台",
     "user": "用户",
     "notSet": "未设置",
     "logout": "退出登录",
