feat(preferences): enhance user preferences management with new schema and components
- Updated user preference schema to include theme, language, timezone, and notification settings.
- Refactored preference-related components to utilize the new schema, improving user experience.
- Added new controllers for managing theme, language, and timezone preferences.
- Implemented hooks for initializing and submitting user preferences, ensuring better form handling.
- Enhanced skills management in user profiles with a new scoring system for skills.
- Improved language support across preference management features.

--- a/console/src/assets/languages/en/elements/directory.json
+++ b/console/src/assets/languages/en/elements/directory.json
@@ -191,21 +191,22 @@
     "skills": {
       "label": "Skills",
       "keyPlaceholder": "Category (e.g., programming, design)",
-      "valuePlaceholder": "Skills separated by comma (e.g., JavaScript, TypeScript)"
-    },
-    "keyValueEditor": {
-      "add": "Add",
-      "remove": "Remove",
-      "key": {
-        "placeholder": "Key"
-      },
-      "value": {
-        "placeholder": "Value",
-        "arrayPlaceholder": "Values separated by comma"
-      }
-    },
-    "messages": {
-      "user_not_found": "User not found"
+      "valuePlaceholder": "Skills separated by comma (e.g., JavaScript, TypeScript)",
+      "namePlaceholder": "Skill name (e.g., JavaScript, React, TypeScript)"
     }
+  },
+  "keyValueEditor": {
+    "add": "Add",
+    "remove": "Remove",
+    "key": {
+      "placeholder": "Key"
+    },
+    "value": {
+      "placeholder": "Value",
+      "arrayPlaceholder": "Values separated by comma"
+    }
+  },
+  "messages": {
+    "user_not_found": "User not found"
   }
 }
