--- a/console/src/assets/languages/zh/elements/directory.json
+++ b/console/src/assets/languages/zh/elements/directory.json
@@ -164,21 +164,22 @@
     "skills": {
       "label": "技能",
       "keyPlaceholder": "类别 (例如: programming, design)",
-      "valuePlaceholder": "技能，用逗号分隔 (例如: JavaScript, TypeScript)"
-    },
-    "keyValueEditor": {
-      "add": "添加",
-      "remove": "删除",
-      "key": {
-        "placeholder": "键"
-      },
-      "value": {
-        "placeholder": "值",
-        "arrayPlaceholder": "值，用逗号分隔"
-      }
-    },
-    "messages": {
-      "user_not_found": "用户未找到"
+      "valuePlaceholder": "技能，用逗号分隔 (例如: JavaScript, TypeScript)",
+      "namePlaceholder": "技能名称 (例如: JavaScript, React, TypeScript)"
     }
+  },
+  "keyValueEditor": {
+    "add": "添加",
+    "remove": "删除",
+    "key": {
+      "placeholder": "键"
+    },
+    "value": {
+      "placeholder": "值",
+      "arrayPlaceholder": "值，用逗号分隔"
+    }
+  },
+  "messages": {
+    "user_not_found": "用户未找到"
   }
 }
