feat(preferences): add theme, language, and timezone selection to user preferences
- Removed the user preference sync hook from the App component to streamline the login process.
- Introduced new language resources for theme, language, and timezone selection in English, French, and Chinese.
- Refactored preference management components to utilize dropdowns for selecting theme, language, and timezone, enhancing user experience.
- Implemented hooks for managing user preferences in a non-suspense mode, allowing for better control over data fetching.
- Updated the DashboardPage to synchronize user preferences upon loading.

--- a/console/src/assets/languages/en/elements/directory.json
+++ b/console/src/assets/languages/en/elements/directory.json
@@ -120,6 +120,18 @@
     "submit": "Submit",
     "submitting": "Submitting...",
     "loading": "Loading preference...",
+    "theme": {
+      "label": "Theme",
+      "placeholder": "Select a theme"
+    },
+    "language": {
+      "label": "Language",
+      "placeholder": "Select a language"
+    },
+    "timezone": {
+      "label": "Timezone",
+      "placeholder": "Select a timezone"
+    },
     "key": {
       "label": "Key",
       "placeholder": "Enter key",
