feat(dashboard): enhance user preferences with new background options and improve dashboard rendering
- Added support for selecting dashboard background animations (waves, squares, letter glitch) in user preferences.
- Updated preference schema and related components to handle the new background options.
- Enhanced DashboardPage to render selected background animations based on user preferences.
- Improved styles for the dashboard to accommodate new background features and enhance visual appeal.

--- a/console/src/assets/languages/en/elements/directory.json
+++ b/console/src/assets/languages/en/elements/directory.json
@@ -132,6 +132,14 @@
       "label": "Timezone",
       "placeholder": "Select a timezone"
     },
+    "dashboardBackground": {
+      "label": "Dashboard Background",
+      "placeholder": "Select a background animation",
+      "waves": "Waves",
+      "squares": "Squares",
+      "letterGlitch": "Letter Glitch",
+      "none": "None"
+    },
     "key": {
       "label": "Key",
       "placeholder": "Enter key",
