feat(dashboard): add PixelBlast background option and update user preferences
- Introduced a new background animation option, PixelBlast, for user preferences.
- Updated the preference schema and related components to include PixelBlast in the dashboard background selection.
- Enhanced the DashboardPage to render the PixelBlast background based on user selection.
- Added necessary styles for the PixelBlast background to ensure proper display and interaction.

--- a/console/src/assets/languages/en/elements/directory.json
+++ b/console/src/assets/languages/en/elements/directory.json
@@ -138,6 +138,7 @@
       "waves": "Waves",
       "squares": "Squares",
       "letterGlitch": "Letter Glitch",
+      "pixelBlast": "Pixel Blast",
       "none": "None"
     },
     "key": {
