--- a/console/src/assets/languages/fr/elements/directory.json
+++ b/console/src/assets/languages/fr/elements/directory.json
@@ -138,6 +138,7 @@
       "waves": "Vagues",
       "squares": "Carrés",
       "letterGlitch": "Glitch de lettres",
+      "pixelBlast": "Pixel Blast",
       "none": "Aucun"
     },
     "key": {
