--- a/console/src/assets/languages/zh/elements/directory.json
+++ b/console/src/assets/languages/zh/elements/directory.json
@@ -111,6 +111,7 @@
       "waves": "波浪",
       "squares": "方块",
       "letterGlitch": "文字故障",
+      "pixelBlast": "像素爆炸",
       "none": "无"
     },
     "key": {
