feat(console): enhance environment configuration and improve error handling UI
- Added VITE_PORT configuration to both development and production environment files for customizable server port settings.
- Updated Vite configuration to dynamically load the port from environment variables, enhancing flexibility.
- Introduced detailed error handling UI in the Suspense component with loading and error fallback components, improving user experience during data fetching.
- Enhanced styles for error display, including new animations and layout adjustments for better visibility and interaction.

--- a/console/src/assets/languages/en/components.json
+++ b/console/src/assets/languages/en/components.json
@@ -61,6 +61,7 @@
     "loading": "Loading...",
     "errorTitle": "Failed to Load",
     "errorDescription": "Please check your network connection or try again later.",
+    "errorDetails": "Error Details",
     "retry": "Retry"
   }
 }
