--- a/console/src/assets/languages/zh/components.json
+++ b/console/src/assets/languages/zh/components.json
@@ -61,6 +61,7 @@
     "loading": "加载中...",
     "errorTitle": "加载失败",
     "errorDescription": "请检查网络连接或稍后重试。",
+    "errorDetails": "错误详情",
     "retry": "重试"
   }
 }
