feat(console): add User Security page and related functionality
- Introduced User Security page to manage user roles and permissions.
- Implemented API endpoint to retrieve grants by subject, enhancing access control features.
- Updated routing and navigation to include the new User Security page.
- Added translations for User Security in English, French, and Chinese.
- Removed Sidebar component and its styles to streamline the layout, replacing it with a more modular approach.

--- a/console/src/assets/languages/en/components.json
+++ b/console/src/assets/languages/en/components.json
@@ -33,7 +33,8 @@
     "editProfile": "Edit Profile",
     "addEducation": "Add Education",
     "addOccupation": "Add Occupation",
-    "editPreference": "Edit Preference"
+    "editPreference": "Edit Preference",
+    "userSecurity": "User Security"
   },
   "searchInput": {
     "placeholder": "Search...",
