feat(profile): enhance ProfilePage with social links and skills sections
- Added new translations for "Social Links" and "Skills" in English, French, and Chinese.
- Introduced new components for displaying social links and skills on the ProfilePage.
- Updated layout styles to accommodate the new sections, improving the overall user interface.
- Refactored the ProfilePage component to include the new social links and skills cards, enhancing user experience.

--- a/console/src/assets/languages/en/ProfilePage.json
+++ b/console/src/assets/languages/en/ProfilePage.json
@@ -66,5 +66,7 @@
   "cancel": "Cancel",
   "submit": "Submit",
   "submitting": "Submitting...",
-  "edit": "Edit"
+  "edit": "Edit",
+  "socialLinks": "Social Links",
+  "skills": "Skills"
 }
