--- a/console/src/assets/languages/fr/ProfilePage.json
+++ b/console/src/assets/languages/fr/ProfilePage.json
@@ -46,5 +46,7 @@
   "employmentType": "Type d'emploi",
   "responsibilities": "Responsabilités",
   "skillsUsed": "Compétences utilisées",
-  "edit": "Modifier"
+  "edit": "Modifier",
+  "socialLinks": "Liens sociaux",
+  "skills": "Compétences"
 }
