--- a/console/src/assets/languages/zh/ProfilePage.json
+++ b/console/src/assets/languages/zh/ProfilePage.json
@@ -66,5 +66,7 @@
   "cancel": "取消",
   "submit": "提交",
   "submitting": "提交中...",
-  "edit": "编辑"
+  "edit": "编辑",
+  "socialLinks": "社交链接",
+  "skills": "技能"
 }
