feat(profile): enhance ProfilePage with user status and verification features
- Added new translations for user status and verification in English, French, and Chinese.
- Introduced a new hook, useStatus, to manage user status styles dynamically.
- Updated AccountInfoCard, UserEmailsCard, UserPhonesCard, UserEducationsCard, and UserOccupationsCard components to display user status and verification badges.
- Enhanced styles for verified and unverified badges, improving visual feedback for users.
- Refactored ProfilePage components to integrate new status and verification features, enhancing user experience.

--- a/console/src/assets/languages/en/ProfilePage.json
+++ b/console/src/assets/languages/en/ProfilePage.json
@@ -68,5 +68,15 @@
   "submitting": "Submitting...",
   "edit": "Edit",
   "socialLinks": "Social Links",
-  "skills": "Skills"
+  "skills": "Skills",
+  "status": "Status",
+  "statusActive": "Active",
+  "statusPending": "Pending",
+  "statusDeactive": "Deactive",
+  "statusInactive": "Inactive",
+  "statusSuspended": "Suspended",
+  "statusLocked": "Locked",
+  "isVerified": "Verified",
+  "unverified": "Unverified",
+  "lastLoginAt": "Last Login"
 }
