feat(sidebar): update sidebar menu with new education and occupation options
- Added new icons for education and occupation management in the sidebar.
- Introduced "Edit Education" and "Edit Occupation" menu items for improved user navigation.
- Updated translations for these new options in English, French, and Chinese components.
- Enhanced the organization of icon imports for better readability.

--- a/console/src/assets/languages/en/components.json
+++ b/console/src/assets/languages/en/components.json
@@ -32,7 +32,9 @@
     "profileView": "View Profile",
     "editProfile": "Edit Profile",
     "addEducation": "Add Education",
+    "editEducation": "Edit Education",
     "addOccupation": "Add Occupation",
+    "editOccupation": "Edit Occupation",
     "editPreference": "Edit Preference",
     "userSecurity": "User Security"
   },
