feat(access): implement action and action requirement management
- Added new APIs for creating, retrieving, and deleting actions and action requirements, enhancing access control capabilities.
- Updated routing and event handling to support action and action requirement operations.
- Introduced new query keys and constants for managing actions and action requirements in the frontend.
- Enhanced the sidebar with new permission management options, including roles, permissions, and actions.
- Updated translations and documentation to reflect the new features and improve user experience.

--- a/console/src/assets/languages/en/UserSecurityPage.json
+++ b/console/src/assets/languages/en/UserSecurityPage.json
@@ -3,6 +3,8 @@
   "subtitle": "View your roles and permissions information",
   "loading": "Loading...",
   "userNotFound": "User not found",
+  "tabMySecurity": "My Security",
+  "tabPermissionManagement": "Permission Management",
   "roles": "Roles",
   "permissions": "Permissions",
   "noRoles": "No roles",
@@ -14,9 +16,22 @@
   "permissionsFromRole": "Permissions from Role",
   "rolePermissionsNote": "All permissions for this role",
   "key": "Key",
+  "name": "Name",
   "description": "Description",
   "scopeType": "Scope Type",
   "expiresAt": "Expires At",
   "revokedAt": "Revoked At",
-  "note": "Note"
+  "note": "Note",
+  "mgmtTitle": "Roles & Permissions",
+  "mgmtSubtitle": "Create roles and permissions, assign permissions to roles (Casbin-style rules).",
+  "createRole": "Create Role",
+  "createPermission": "Create Permission",
+  "assignPermissionToRole": "Assign Permission to Role",
+  "viewRolePermissions": "View Role Permissions",
+  "roleKey": "Role Key",
+  "permissionKey": "Permission Key",
+  "lookup": "Look Up",
+  "addPermission": "Add Permission",
+  "remove": "Remove",
+  "isSystem": "System"
 }
