--- a/console/src/assets/languages/fr/UserSecurityPage.json
+++ b/console/src/assets/languages/fr/UserSecurityPage.json
@@ -3,6 +3,8 @@
   "subtitle": "Consultez vos informations de rôles et d'autorisations",
   "loading": "Chargement...",
   "userNotFound": "Utilisateur introuvable",
+  "tabMySecurity": "Ma sécurité",
+  "tabPermissionManagement": "Gestion des autorisations",
   "roles": "Rôles",
   "permissions": "Autorisations",
   "noRoles": "Aucun rôle",
@@ -14,9 +16,22 @@
   "permissionsFromRole": "Autorisations du rôle",
   "rolePermissionsNote": "Toutes les autorisations pour ce rôle",
   "key": "Clé",
+  "name": "Nom",
   "description": "Description",
   "scopeType": "Type de portée",
   "expiresAt": "Expire le",
   "revokedAt": "Révoqué le",
-  "note": "Remarque"
+  "note": "Remarque",
+  "mgmtTitle": "Rôles et autorisations",
+  "mgmtSubtitle": "Créer des rôles et autorisations, assigner des autorisations aux rôles (règles type Casbin).",
+  "createRole": "Créer un rôle",
+  "createPermission": "Créer une autorisation",
+  "assignPermissionToRole": "Assigner une autorisation à un rôle",
+  "viewRolePermissions": "Voir les autorisations du rôle",
+  "roleKey": "Clé du rôle",
+  "permissionKey": "Clé de l'autorisation",
+  "lookup": "Rechercher",
+  "addPermission": "Ajouter l'autorisation",
+  "remove": "Retirer",
+  "isSystem": "Système"
 }
