--- a/console/src/assets/languages/zh/UserSecurityPage.json
+++ b/console/src/assets/languages/zh/UserSecurityPage.json
@@ -3,6 +3,8 @@
   "subtitle": "查看您的角色和权限信息",
   "loading": "加载中...",
   "userNotFound": "未找到用户信息",
+  "tabMySecurity": "我的安全",
+  "tabPermissionManagement": "权限管理",
   "roles": "角色",
   "permissions": "权限",
   "noRoles": "暂无角色",
@@ -14,9 +16,22 @@
   "permissionsFromRole": "来自角色的权限",
   "rolePermissionsNote": "此角色的所有权限",
   "key": "键",
+  "name": "名称",
   "description": "描述",
   "scopeType": "作用域类型",
   "expiresAt": "过期时间",
   "revokedAt": "撤销时间",
-  "note": "备注"
+  "note": "备注",
+  "mgmtTitle": "角色与权限",
+  "mgmtSubtitle": "创建角色和权限，为角色分配权限（Casbin 风格规则）。",
+  "createRole": "创建角色",
+  "createPermission": "创建权限",
+  "assignPermissionToRole": "为角色分配权限",
+  "viewRolePermissions": "查看角色权限",
+  "roleKey": "角色 Key",
+  "permissionKey": "权限 Key",
+  "lookup": "查询",
+  "addPermission": "添加权限",
+  "remove": "移除",
+  "isSystem": "系统"
 }
