feat(access): enhance role and permission retrieval with error handling
- Updated GetRoleByKey, GetPermissionByKey, and GetActionByKey APIs to return null for 404 errors instead of throwing exceptions, improving error handling.
- Added user-friendly messages for not found roles, permissions, and actions in English, French, and Chinese language files.
- Refactored related components to display appropriate messages when no data is found, enhancing user experience.
- Cleaned up imports in various pages and components for better organization and readability.

--- a/console/src/assets/languages/en/AddActionPage.json
+++ b/console/src/assets/languages/en/AddActionPage.json
@@ -11,5 +11,6 @@
   "lookupActionByKey": "Lookup Action by Key",
   "lookup": "Lookup",
   "loading": "Loading...",
-  "systemAction": "System"
+  "systemAction": "System",
+  "notFound": "No action found for this key."
 }
