--- a/console/src/assets/languages/en/PermissionManagementPage.json
+++ b/console/src/assets/languages/en/PermissionManagementPage.json
@@ -20,5 +20,6 @@
   "systemPermission": "System permission",
   "permissions": "Permissions",
   "noPermissions": "No permissions",
-  "remove": "Remove"
+  "remove": "Remove",
+  "notFound": "Not found for this key."
 }
