--- a/console/src/assets/languages/fr/PermissionManagementPage.json
+++ b/console/src/assets/languages/fr/PermissionManagementPage.json
@@ -20,5 +20,6 @@
   "systemPermission": "Permission système",
   "permissions": "Permissions",
   "noPermissions": "Aucune permission",
-  "remove": "Retirer"
+  "remove": "Retirer",
+  "notFound": "Aucun résultat pour cette clé."
 }
