feat(theme): add fresh theme and update theme management
- Introduced a new "fresh" theme across English, French, and Chinese language files.
- Updated theme exports in the base theme and types to include the fresh theme.
- Enhanced the ThemeProvider to utilize a dynamic list of available themes, improving theme management and flexibility.

--- a/console/src/assets/languages/en/components.json
+++ b/console/src/assets/languages/en/components.json
@@ -4,7 +4,8 @@
     "light": "Light",
     "dark": "Dark",
     "cosmic": "Cosmic",
-    "corporate": "Corporate"
+    "corporate": "Corporate",
+    "fresh": "Fresh"
   },
   "languageSwitcher": {
     "english": "English",
