--- a/console/src/assets/languages/fr/components.json
+++ b/console/src/assets/languages/fr/components.json
@@ -4,7 +4,8 @@
     "light": "Clair",
     "dark": "Sombre",
     "cosmic": "Cosmique",
-    "corporate": "Entreprise"
+    "corporate": "Entreprise",
+    "fresh": "Fresh"
   },
   "languageSwitcher": {
     "english": "Anglais",
