--- a/console/src/assets/languages/zh/components.json
+++ b/console/src/assets/languages/zh/components.json
@@ -4,7 +4,8 @@
     "light": "浅色",
     "dark": "深色",
     "cosmic": "宇宙",
-    "corporate": "企业"
+    "corporate": "企业",
+    "fresh": "清新"
   },
   "languageSwitcher": {
     "english": "英语",
